--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,11 +29,10 @@
     ],
     "overrides": [{ "files": [
         ".js",
-        ".ts",
+//        ".ts",
         ".jsx",
         ".tsx",
         "**/*.spec.js",
-        "**/*.test.ts",
         "**/*.test.tsx",
         "**/*.spec.tsx"
     ] }],
@@ -77,16 +76,16 @@
         "no-shadow": "off",
         "no-debugger": "error",
         "no-unused-vars": "off",
-        "no-magic-numbers": [
-            "error",
-            {
-                "ignore": [
-                    0,
-                    1,
-                    -1
-                ]
-            }
-        ],
+//        "no-magic-numbers": [
+//            "warn",
+//            {
+//                "ignore": [
+//                    0,
+//                    1,
+//                    -1
+//                ]
+//            }
+//        ],
         "no-use-before-define": "off",
         "no-param-reassign": ["warn", {
             "props": true,
@@ -121,7 +120,7 @@
         }],
         "@typescript-eslint/no-unused-vars": ["warn"],
         "@typescript-eslint/explicit-function-return-type": [
-            "error",
+            "warn",
             {
                 "allowExpressions": true
             }
