--- a/package.json
+++ b/package.json
@@ -30,25 +30,12 @@
     "deploy": "gh-pages -d build",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prepare": "husky install",
-    "lint-fix": "eslint --fix"
-  },
-  "lint-staged": {
-    "**/*.{js,ts,jsx,tsx}": [
-      "npm run lint-fix",
-      "prettier --write"
-    ]
+    "prepare": "husky install"
   },
   "eslintConfig": {
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -74,22 +61,8 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.56.0",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint": "8.22.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0",
-    "husky": "^8.0.0",
-    "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "webpack": "^5.76.3"
   }
